# wasm-components-sample

./: .gitignore  README.md  build.sh  clean.sh  out.wasm
app/: Cargo.toml
app/src/: bindings.rs  main.rs
app/wit/: world.wit
string-length/src/: bindings.rs
string-operations/: Cargo.toml
string-operations/src/: bindings.rs  lib.rs
string-operations/wit/: world.wit
string_length/: Cargo.toml
string_length/wit/: world.wit
