[package]
name = "string-operations"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "dkwr:string-operations"

[package.metadata.component.target]
path = "wit"
world = "string-operations"